fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -375,7 +375,7 @@
 }
 
 .footer-discord-container {
-  background-color: var(--logo-color);
+  background-color: var(--background-color-end);
   padding: 16px;
   border-radius: 16px;
 }
